# FleetGuard

./: .env.example  .env.local  .gitignore  Dockerfile  FleetGuard 原型系统需求说明.docx  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  7a94410433f0_add_updated_at_to_policies.py
docker/employee/: Dockerfile  README.md  entrypoint.sh
docs/: index.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.css  main.tsx
frontend/src/api/: client.ts  endpoints.ts
frontend/src/components/: AppLayout.tsx
frontend/src/pages/: Approvals.tsx  Audit.tsx  Dashboard.tsx  DeviceDetail.tsx  Devices.tsx  Events.tsx  Login.tsx  Policies.tsx
frontend/src/router/: index.tsx
frontend/src/stores/: auth.tsx
frontend/src/types/: index.ts
frontend/src/utils/: config.ts
openclaw-plugin/: openclaw.plugin.json  package-lock.json  package.json
openclaw-plugin/src/: index.ts  types.ts
openclaw-plugin/src/adapters/: hermes.ts  interface.ts  openclaw.ts
openclaw-plugin/src/client/: sidecarClient.ts
openclaw-plugin/src/core/: plugin.ts
policies/: default.yaml  lockdown.yaml
scripts/: demo_data.py  install_control_center.sh  install_employee.sh  run_demo.sh  seed.py  simulate_device.py  start_dev.sh
sidecar/: Dockerfile  pyproject.toml
src/agentfleetcontrol/: __init__.py  config.py  database.py  deps.py  main.py
src/fleetguard/: __init__.py  config.py  database.py  deps.py  main.py
tests/: conftest.py  test_devices.py  test_events.py  test_risk_engine.py
(+97 files in other folders)
